--- a/install-cluster.yml
+++ b/install-cluster.yml
@@ -1,6 +1,6 @@
 ---
 - name: Setup EDB Cluster
-  hosts: edb_pg_nodes
+  hosts: edb_nodes
   become: true
   vars_files:
     - vars/main.yml
@@ -18,3 +18,6 @@
 
     - name: Install PGD on all nodes
       role: roles/gebz97.edb-pgd-install
+
+    - name: Setup PGD Cluster
+      role: roles/gebz97.edb-pgd-setup
