--- a/vars/main.yml
+++ b/vars/main.yml
@@ -3,10 +3,13 @@ satellite_rhel_9_cmd:
 edb_repo_baseurl: "http://192.168.1.66/repos/edb/enterprisedb-enterprise/"
 edb_pgd_repo_baseurl: "http://192.168.1.66/repos/edb/enterprisedb-distributed/"
 satellite_enroll: False
+edb_root_dir: /opt/edb
 edb_data_dir: /opt/edb/data
 edb_initdb_encoding: "UTF-8"
 edb_initdb_locale: "en_US.UTF-8"
 edb_initdb_user: "dba"
+edb_superuser: "dba"
+edb_port: 5444
 edb_superuser_pwfile_path: /tmp/edb-superuser-pwfile
 edb_initdb_redwood_compat: false
 edb_initdb_redwood_like: false
